--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,6 +1,6 @@
 ﻿[dirs]
-dir=C:\Users\fVfsr\AppData\Local\Google\Chrome\*\Default\Cache\
-dir=C:\Users\fVfsr\AppData\Local\Google\Chrome\*\Default\Media Cache\
+dir=${LocalApplicationData}\Google\Chrome\*\Default\Cache\
+dir=${LocalApplicationData}\Ambiesoft\Dicregate\cefcache\Cache
 dir=C:\LegacyPrograms\IronPortable\Profile\Default\Cache
 dir=C:\LegacyPrograms\IronPortable\Profile\Default\File System
 dir=${Recent}\
@@ -19,3 +19,4 @@ dir=P:\リンク
 dir=C:\RECYCLER
 dir=Z:\RECYCLER
 dir=P:\RECYCLER
+
