--- a/2017/delfols.vcxproj.filters
+++ b/2017/delfols.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="..\delfols\FormMainInitializeComponent.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\lsMisc\ExpandPath.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\lsMisc\stdwin32\stdwin32.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -84,6 +90,12 @@
       <Filter>1 Header</Filter>
     </ClInclude>
     <ClInclude Include="..\delfols\LogListView.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\ExpandPath.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\stdwin32\stdwin32.h">
       <Filter>1 Header</Filter>
     </ClInclude>
   </ItemGroup>
