--- a/2013/delfols.vcxproj
+++ b/2013/delfols.vcxproj
@@ -114,7 +114,8 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(ProjectDir)\..\delfols\config.ini $(TargetDir)</Command>
+      <Command>copy $(ProjectDir)\..\delfols\config.ini $(TargetDir)
+copy C:\Linkout\CommonDLL\TimedMessageBox.dll $(TargetDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -163,8 +164,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>copy C:\Linkout\CommonDLL\TimedMessageBox.dll $(TargetDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
