--- a/2010/delfols.vcxproj.filters
+++ b/2010/delfols.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClCompile Include="..\delfols\StartDeleteDialog.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\delfols\FormMainInitializeComponent.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\delfols\ThreadParam.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\lsMisc\ExpandPath.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -83,6 +92,15 @@
     <ClInclude Include="..\delfols\StartDeleteDialog.h">
       <Filter>1 Header</Filter>
     </ClInclude>
+    <ClInclude Include="..\delfols\LogListView.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\delfols\ThreadParam.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\ExpandPath.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\delfols\app.ico">
@@ -98,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\delfols\FormMain.resX">
+      <Filter>3 Resource</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\delfols\StartDeleteDialog.resx">
       <Filter>3 Resource</Filter>
     </EmbeddedResource>
   </ItemGroup>
