--- a/2013/delfols.vcxproj.filters
+++ b/2013/delfols.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\..\lsMisc\stdwin32\stdwin32.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\lsMisc\HighDPI.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -108,6 +111,9 @@
       <Filter>1 Header</Filter>
     </ClInclude>
     <ClInclude Include="..\..\lsMisc\stdwin32\stdwin32.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\HighDPI.h">
       <Filter>1 Header</Filter>
     </ClInclude>
   </ItemGroup>
