Scroll to bottom

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 Debug/
+Release/
 *.suo
 *.ncb
 *.user
+*.sdf
 
-2010/Release/
-2010/delfols.sdf
-2013/Release/
-2013/delfols.sdf
-2013/ipch/
-2017/.vs/
-2017/Release/
 
