--- a/2019/delfols.vcxproj.filters
+++ b/2019/delfols.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="4 dist">
+      <UniqueIdentifier>{b36c2365-bd2d-43dd-a81a-353bf007f44d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\delfols\AssemblyInfo.cpp">
@@ -119,14 +122,16 @@
     <None Include="..\delfols\config.ini" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\delfols\ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="..\delfols\FormMain.resX">
       <Filter>3 Resource</Filter>
     </EmbeddedResource>
     <EmbeddedResource Include="..\delfols\StartDeleteDialog.resx">
       <Filter>3 Resource</Filter>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\delfols\History.txt">
+      <Filter>4 dist</Filter>
+    </Text>
   </ItemGroup>
 </Project>
